connected to firebase

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ body {
     border-radius: 0px;
     background-color: lightblue;
 
-    color:darkslateblue;
+    color:navy;
     font-family: Trebuchet MS, sans-serif;
     text-align: center;
 }
